Task 4 completed: Client scanning and policy management
✅ 4.1 Client scanning endpoint with intelligent service detection
✅ 4.2 Admin template management with versioning and auto-deployment

Features implemented:
- POST /api/scan - Receives and processes detected scripts/cookies from sites
- Intelligent service identification (Google Analytics, Facebook Pixel, etc.)
- Automatic policy updates based on detected third-party services
- Admin template management endpoints:
  - GET /api/admin/templates - List all templates with pagination
  - PUT /api/admin/templates - Update global templates and apply to all sites
  - POST /api/admin/templates - Create new template versions
  - GET/PUT/DELETE /api/admin/templates/[id] - Individual template management
  - POST /api/admin/templates/[id]/activate - Activate specific templates
- Template versioning and history tracking
- Automatic template application to all registered sites
- Admin authentication with secure token validation
- Comprehensive audit logging for template changes

The system now automatically detects new third-party services on WordPress sites and updates privacy policies accordingly.

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ REDIS_URL=your_redis_url_for_rate_limiting
 
 # Widget Configuration
 NEXT_PUBLIC_WIDGET_CDN_URL=https://your-domain.vercel.app
+NEXT_PUBLIC_API_URL=https://your-domain.vercel.app
+
+# Admin Configuration
+ADMIN_API_TOKEN=your_secure_admin_token_here
