--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test:api": "tsx src/scripts/test-api.ts",
+    "test:db": "tsx src/lib/test-db.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.0",
+    "dotenv": "^17.2.3",
     "next": "^14.0.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@supabase/supabase-js": "^2.38.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
@@ -23,6 +27,7 @@
     "@types/react-dom": "^18.2.0",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.2.0"
   },
   "engines": {
