feat: implement security and performance optimizations (task 7)
- Add comprehensive rate limiting with Redis/in-memory fallback
- Implement authentication middleware for API tokens and admin access
- Add input sanitization and validation utilities
- Enhance CORS configuration with proper security headers
- Create multi-layer caching system for widget configs and templates
- Add performance monitoring for API endpoints and database queries
- Implement cache management endpoints for admin use
- Add database performance indexes and optimization
- Configure CDN headers for static asset delivery
- Enhance health check endpoint with comprehensive metrics

Addresses requirements: 6.4, 7.1, 7.3 (security), 6.1, 6.2, 6.5 (performance)

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,56 @@
 {
   "functions": {
-    "src/pages/api/**/*.ts": {
+    "src/app/api/**/*.ts": {
       "maxDuration": 30
     }
   },
   "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/api/widget/script",
       "headers": [
-        { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" }
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400, s-maxage=86400"
+        },
+        {
+          "key": "Content-Type",
+          "value": "application/javascript"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        }
+      ]
+    },
+    {
+      "source": "/api/widget/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=300, s-maxage=300"
+        },
+        {
+          "key": "Vary",
+          "value": "Accept-Encoding"
+        }
+      ]
+    },
+    {
+      "source": "/api/policy/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=1800, s-maxage=1800"
+        }
+      ]
+    },
+    {
+      "source": "/api/health",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }
       ]
     }
   ],
