--- a/.env.example
+++ b/.env.example
@@ -10,12 +10,17 @@ NEXTAUTH_SECRET=your_nextauth_secret
 # Environment
 NODE_ENV=development
 
-# Rate Limiting
-REDIS_URL=your_redis_url_for_rate_limiting
+# Rate Limiting (Upstash Redis)
+UPSTASH_REDIS_REST_URL=your_upstash_redis_rest_url
+UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_rest_token
 
 # Widget Configuration
 NEXT_PUBLIC_WIDGET_CDN_URL=https://your-domain.vercel.app
 NEXT_PUBLIC_API_URL=https://your-domain.vercel.app
 
 # Admin Configuration
-ADMIN_API_TOKEN=your_secure_admin_token_here
+ADMIN_API_TOKEN=your_secure_admin_token_here_minimum_32_characters
+
+# Security Configuration
+CORS_ALLOWED_ORIGINS=https://yourdomain.com,https://anotherdomain.com
+RATE_LIMIT_ENABLED=true
