--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.6",
     "dotenv": "^17.2.3",
     "next": "^14.0.0",
     "node-fetch": "^3.3.2",
