--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:integration": "jest --selectProjects=integration --runInBand",
+    "test:unit": "jest --selectProjects=unit",
     "test:api": "tsx src/scripts/test-api.ts",
     "test:db": "tsx src/lib/test-db.ts"
   },
@@ -24,11 +29,18 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^30.0.0",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "jsdom": "^27.0.1",
+    "ts-jest": "^29.4.5",
     "tsx": "^4.20.6",
     "typescript": "^5.2.0"
   },
