feat: Add deployment infrastructure, monitoring, Swedish content, floating button, and policy modal spec
- Add GitHub Actions CI/CD pipeline for automated deployment
- Implement comprehensive monitoring with logging, analytics, and alerting
- Add Swedish translations for banner, policies, and all UI elements
- Implement floating cookie settings button with visibility logic
- Create policy modal display feature specification
- Add deployment scripts for production setup
- Include accessibility and cross-browser testing infrastructure
- Add demo page for testing widget functionality

--- a/package.json
+++ b/package.json
@@ -15,7 +15,18 @@
     "test:integration": "jest --selectProjects=integration --runInBand",
     "test:unit": "jest --selectProjects=unit",
     "test:api": "tsx src/scripts/test-api.ts",
-    "test:db": "tsx src/lib/test-db.ts"
+    "test:db": "tsx src/lib/test-db.ts",
+    "deploy": "./scripts/deploy.sh",
+    "deploy:prod": "./scripts/deploy.sh production",
+    "deploy:preview": "./scripts/deploy.sh preview",
+    "db:migrate": "./scripts/migrate-db.sh migrate",
+    "db:reset": "./scripts/migrate-db.sh reset",
+    "db:types": "./scripts/migrate-db.sh types",
+    "env:setup": "./scripts/setup-env.sh",
+    "env:dev": "./scripts/setup-env.sh dev",
+    "env:prod": "./scripts/setup-env.sh prod",
+    "env:validate": "./scripts/setup-env.sh validate",
+    "env:status": "./scripts/setup-env.sh status"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0",
@@ -38,6 +49,7 @@
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jsdom": "^27.0.1",
     "ts-jest": "^29.4.5",
