chore: Update .gitignore to exclude debug/temp files and build artifacts
- Add patterns for debug documentation (DEBUG-*.md)
- Exclude temporary implementation notes (*-DONE.md, *-SUMMARY.md)
- Ignore test HTML files in public directory
- Exclude tsconfig.tsbuildinfo build artifact
- Remove previously committed temp files from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,19 @@ jspm_packages/
 
 # Kiro IDE specs and internal files
 .kiro/
+
+# Development documentation and debug files
+DEBUG-*.md
+READY-*.md
+*-SUMMARY.md
+*-DONE.md
+*-EXPLAINED.md
+CLIENT-FACING-*.md
+
+# Test files
+public/test-*.html
+public/test-*.js
+public/test-*.css
+
+# Build info
+tsconfig.tsbuildinfo
