Fix Vercel deployment warnings and errors
- Add dynamic rendering config to health endpoint to fix cache errors
- Pin Node.js version to 18.x to prevent auto-upgrades
- Remove deprecated memory setting from vercel.json
- Add production fixes documentation
- Resolves all Vercel deployment warnings

--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,7 @@
   "regions": ["arn1"],
   "functions": {
     "src/app/api/**/*.ts": {
-      "maxDuration": 30,
-      "memory": 1024
+      "maxDuration": 30
     }
   },
   "headers": [
