--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@supabase/supabase-js": "^2.38.0",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "dotenv": "^17.2.3",
     "next": "^14.0.0",
     "node-fetch": "^3.3.2",
