feat: enhance Sentry configuration for development testing
- Add environment detection to Sentry config
- Enable Sentry in development (with debug logging)
- Add SENTRY_ENABLED environment variable for easy disable
- Enhance test-error endpoint with multiple test types
- Add context and tags to test errors
- Set tracesSampleRate based on environment (100% dev, 10% prod)
- Disable sendDefaultPii for privacy compliance

Test endpoints:
- GET /api/test-error (error)
- GET /api/test-error?type=warning (warning)
- GET /api/test-error?type=info (info)

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,8 @@ ADMIN_API_TOKEN=your_secure_admin_token_here_minimum_32_characters
 # Security Configuration
 CORS_ALLOWED_ORIGINS=https://yourdomain.com,https://anotherdomain.com
 RATE_LIMIT_ENABLED=true
+
+# Sentry Configuration
+SENTRY_ENABLED=true
+# SENTRY_DSN is configured in sentry.*.config.ts files
+# Set to false to disable Sentry: SENTRY_ENABLED=false
